[style] fixed submit button on mobile

--- a/ucla-cat-cafe/src/components/contact/contact.scss
+++ b/ucla-cat-cafe/src/components/contact/contact.scss
@@ -20,7 +20,7 @@
         }
 
         .contact-button {
-            width: 50px;
+            width: 4rem;
         }
 
         textarea {
